--- a/.github/workflows/auto-accept-collabs.yml
+++ b/.github/workflows/auto-accept-collabs.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Fetching Local Repository
         uses: actions/checkout@master
       - name: Auto Accept Collabs
-        uses: kbrashears5/github-action-auto-accept-collabs@v1.0.1
+        uses: kbrashears5/github-action-auto-create-collabs@master
         with:
           TOKEN: ${{ secrets.ACTIONS }}
